# informaticup21-team-chillow

./: .gitignore  Dockerfile  LICENSE  README.md  build.py  main.py  pyproject.toml  requirements.txt
.git-hooks/: pre-push
.github/workflows/: latex.yml  python-app.yml
chillow/: artificial_intelligence.py  cell.py  connection.py  data_loader.py  data_writer.py  exceptions.py  game.py  monitoring.py  player.py
chillow/ai/: __init__.py  alpha_beta_node.py  alpha_beta_pruning_ai.py  artificial_intelligence.py  not_killing_Itself_ai.py  not_killing_itself_ai.py  pathfinding_ai.py  pathfinding_search_tree_ai  pathfinding_search_tree_ai.py  random_ai.py  search_tree_ai.py  search_tree_node.py  search_tree_pathfinding_ai.py
chillow/controller/: __init__.py  ai_evaluation_controller.py  controller.py  monitoring.py  offline_controller.py  offline_evaluation_controller.py  online_controller.py
chillow/game_services/: exceptions.py  game_service.py  turn.py
chillow/model/: action.py  cell.py  direction.py  game.py  player.py  turn.py
chillow/service/: data_loader.py  data_writer.py  game_service.py
chillow/view/: __init__.py  console_view.py  graphical_view.py  headless_view.py  view.py
dokumentation/: .gitignore  Abkuerzungen.tex  Befehle.tex  Glossar.tex  Listings.tex  document.tex  index_style  literatur.bib
dokumentation/Dokumente/: Diagramm_Paketstruktur.drawio  Diagramm_Schichtenmodell.txt  Get_And_Visit_Cells_GameService.txt  (+14 more)
tests/: __init__.py  test_chillow_ai.py  test_json_data_loader.py  test_json_data_writer.py  test_offline_connection.py
(+79 files in other folders)
