[tool.poetry]
name = "chillow"
version = "0.1.0"
description = ""
authors = ["Jonas Hellmann <hellmann.jonas@web.de>", "Florian Trei"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^8.1"
tabulate = "^0.8.7"
iso8601 = "^0.1.13"
pathfinding = "^0.0.4"
numpy = "^1.21.0"
requests = "^2.24.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
